Flock fixed on mobile.

--- a/src/components/homepage/flock.module.css
+++ b/src/components/homepage/flock.module.css
@@ -18,4 +18,9 @@
   margin-bottom: -50vh;
   width: 90vw;
   height: auto;
+
+  @media screen and (max-width: 48rem) {
+    transform: translateY(100%);
+    margin-bottom: -25vh;
+  }
 }
